# rust_sports_cli

./: Cargo.toml
src/: main.rs  old.rs
