[package]
name = "rust_sports_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
date_time = "2.2.0"
reqwest = { version = "0.11.24", features = ["json","blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.113"
ratatui = "0.26.0"
crossterm = "0.27.0"
anyhow = "1.0.79"
chrono = "0.4.33"
